--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ body{
 }
 .container{
     margin: 30px auto;
+    padding: 15px;
     border: 1px solid #fff;
     background: rgba(0, 0, 0, 0.5);
     color: #fff;
@@ -39,6 +40,7 @@ body{
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    padding: 15px;
 }
 #score{
     color: maroon;
